--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#004D4C</color>
+    <color name="colorPrimaryDark">#00251A</color>
+    <color name="colorAccent">#39796B</color>
+
+    <color name="btnSignUp">#39796B</color>
+    <color name="btnSignActive">#A9D440</color>
 </resources>
