SignUp And SignIn Activity Created

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
         <Button
             android:id="@+id/btnSignUp"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:layout_margin="8dp"
             android:layout_weight="1"
             android:fontFamily="@font/comfortaa_light"
@@ -79,7 +79,7 @@
         <Button
             android:id="@+id/btnSignIn"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:layout_margin="8dp"
             android:layout_weight="1"
             android:fontFamily="@font/comfortaa_light"
