--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -4,49 +4,105 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context="com.rootonelabs.vicky.lazeez.SignIn">
 
-    <LinearLayout
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp"
-        android:orientation="vertical">
-        
-        <com.rengwuxian.materialedittext.MaterialEditText
-        android:id="@+id/edtPhone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Phone Number"
-        android:textColorHint="@android:color/white"
-        android:text=""
-        android:textColor="@android:color/white"
-        android:textSize="34sp"
-        android:inputType="phone"
-        app:met_baseColor="@android:color/white"
-        app:met_floatingLabel="highlight"
-        app:met_maxCharacters="11"
-        app:met_primaryColor="@android:color/white"
-        app:met_singleLineEllipsis="true"
-        />
+        android:layout_height="match_parent"
+        android:src="@drawable/image"
+        android:scaleType="centerCrop"/>
 
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/edtName"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/berkshire_swash"
+        android:text="Sign-In"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimary"
+        android:textSize="48dp" />
+
+    <FrameLayout
+        android:id="@+id/signUpForm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+
+        <ImageView
+            android:layout_width="300dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:src="@drawable/cardview"
+            android:alpha="0.5"
+            />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Phone Number"
-            android:textColorHint="@android:color/white"
-            android:text=""
-            android:textColor="@android:color/white"
-            android:textSize="34sp"
-            android:inputType="textPersonName"
-            app:met_baseColor="@android:color/white"
-            app:met_floatingLabel="highlight"
-            app:met_maxCharacters="11"
-            app:met_primaryColor="@android:color/white"
-            app:met_singleLineEllipsis="true"
-            />
-    </LinearLayout>
+            android:layout_centerInParent="true"
+            android:layout_marginRight="32dp"
+            android:layout_marginLeft="32dp"
+            android:orientation="vertical"
+            android:layout_gravity="center">
+
+
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/edtPhone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Phone Number"
+                android:textColorHint="@color/hintColor"
+                android:text="9898111111"
+                android:textColor="@android:color/black"
+                android:textSize="34sp"
+                android:inputType="phone"
+                app:met_baseColor="@color/colorPrimaryDark"
+                app:met_floatingLabel="highlight"
+                app:met_maxCharacters="11"
+                app:met_primaryColor="@android:color/black"
+                app:met_singleLineEllipsis="true"
+                />
+
+
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/edtPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                android:textColorHint="@color/hintColor"
+                android:text="pass"
+                android:textColor="@android:color/black"
+                android:textSize="34sp"
+                android:inputType="textPassword"
+                app:met_baseColor="@color/colorPrimaryDark"
+                app:met_floatingLabel="highlight"
+                app:met_maxCharacters="11"
+                app:met_primaryColor="@android:color/black"
+                app:met_singleLineEllipsis="true"
+                />
+
+        </LinearLayout>
+
+    </FrameLayout>
+
+
+    <Button
+        android:id="@+id/btnSignIn"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="50dp"
+        android:layout_weight="1"
+        android:fontFamily="@font/comfortaa_light"
+        android:text="Sign In"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:backgroundTint="@color/btnSignActive"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"/>
+
 
 </RelativeLayout>
