Category Menu And Navigavtion Drawer Completed

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="btnSignUp">#39796B</color>
     <color name="btnSignActive">#A9D440</color>
     <color name="hintColor">#263238</color>
+
+    <color name="overlayBackground">#7f333639</color>
+    <color name="overlayActionBar">#0e0d0e</color>
 </resources>
