Created List of food for the food category in the menu

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -53,6 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Phone Number"
+                android:text="1234"
                 android:textColorHint="@color/hintColor"
                 android:textColor="@android:color/black"
                 android:textSize="34sp"
@@ -70,6 +71,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Password"
+                android:text="pass"
                 android:textColorHint="@color/hintColor"
                 android:textColor="@android:color/black"
                 android:textSize="34sp"
