--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -25,11 +25,11 @@
             android:layout_centerInParent="true"
             android:background="#4f0e0d0e"
             android:fontFamily="@font/berkshire_swash"
-            android:text="Name Of Menu"
+            android:text="Name Of Food"
 
             android:textAlignment="center"
             android:textColor="#ffffff"
-            android:textSize="36sp" />
+            android:textSize="20sp" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
