--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -30,13 +30,12 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true">
 
-        <ImageView
-            android:layout_width="300dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:src="@drawable/cardview"
-            android:alpha="0.5"
-            />
+
+    <android.support.v7.widget.CardView
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        app:cardBackgroundColor="#7effffff"
+        app:cardCornerRadius="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -84,6 +83,9 @@
                 />
 
         </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
 
     </FrameLayout>
 
