--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -30,73 +30,75 @@
     android:layout_height="wrap_content"
     android:layout_centerInParent="true">
 
-    <ImageView
+    <android.support.v7.widget.CardView
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_gravity="center"
-        android:src="@drawable/cardview"
-        android:alpha="0.5"
-        />
+        app:cardCornerRadius="10dp"
+        app:cardBackgroundColor="#7effffff"
+        >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginRight="32dp"
-        android:layout_marginLeft="32dp"
-        android:orientation="vertical"
-        android:layout_gravity="center">
-
-
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/edtPhone"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Phone Number"
-            android:textColorHint="@color/hintColor"
-            android:textColor="@android:color/black"
-            android:textSize="34sp"
-            android:inputType="phone"
-            app:met_baseColor="@color/colorPrimaryDark"
-            app:met_floatingLabel="highlight"
-            app:met_maxCharacters="10"
-            app:met_primaryColor="@android:color/black"
-            app:met_singleLineEllipsis="true"
-            />
-
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/edtName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Name"
-            android:textColorHint="@color/hintColor"
-            android:textColor="@android:color/black"
-            android:textSize="34sp"
-            android:inputType="textPersonName"
-            app:met_baseColor="@color/colorPrimaryDark"
-            app:met_floatingLabel="highlight"
-            app:met_primaryColor="@android:color/black"
-            app:met_singleLineEllipsis="true"
-            />
+            android:layout_centerInParent="true"
+            android:layout_marginRight="32dp"
+            android:layout_marginLeft="32dp"
+            android:orientation="vertical"
+            android:layout_gravity="center">
 
 
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/edtPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Password"
-            android:textColorHint="@color/hintColor"
-            android:textColor="@android:color/black"
-            android:textSize="34sp"
-            android:inputType="textPassword"
-            app:met_baseColor="@color/colorPrimaryDark"
-            app:met_floatingLabel="highlight"
-            app:met_maxCharacters="10"
-            app:met_primaryColor="@android:color/black"
-            app:met_singleLineEllipsis="true"
-            />
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/edtPhone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Phone Number"
+                android:textColorHint="@color/hintColor"
+                android:textColor="@android:color/black"
+                android:textSize="34sp"
+                android:inputType="phone"
+                app:met_baseColor="@color/colorPrimaryDark"
+                app:met_floatingLabel="highlight"
+                app:met_maxCharacters="10"
+                app:met_primaryColor="@android:color/black"
+                app:met_singleLineEllipsis="true"
+                />
 
-    </LinearLayout>
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/edtName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Name"
+                android:textColorHint="@color/hintColor"
+                android:textColor="@android:color/black"
+                android:textSize="34sp"
+                android:inputType="textPersonName"
+                app:met_baseColor="@color/colorPrimaryDark"
+                app:met_floatingLabel="highlight"
+                app:met_primaryColor="@android:color/black"
+                app:met_singleLineEllipsis="true"
+                />
+
+
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/edtPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                android:textColorHint="@color/hintColor"
+                android:textColor="@android:color/black"
+                android:textSize="34sp"
+                android:inputType="textPassword"
+                app:met_baseColor="@color/colorPrimaryDark"
+                app:met_floatingLabel="highlight"
+                app:met_maxCharacters="10"
+                app:met_primaryColor="@android:color/black"
+                app:met_singleLineEllipsis="true"
+                />
+
+        </LinearLayout>
+
+
+    </android.support.v7.widget.CardView>
 
 </FrameLayout>
 
